# KalHozMobile

./: .gitignore  README.md
3D/: DCDC.SLDPRT  ESP.SLDPRT  IMU.SLDPRT  JGB37-520.SLDASM  Part22.SLDPRT  RPi5.SLDPRT  Аккум.SLDPRT  База.SLDPRT  База2.SLDPRT  База3.SLDPRT  Драйвер.SLDPRT  Колесо.SLDPRT  Крепление мотора.SLDPRT  Муфта.SLDPRT  Ножка.SLDPRT  Привод.SLDASM  Стойка.SLDPRT
3D/Electr/: H-Bridge_L298N.SLDPRT  raspberry-pi-5-sbc-simple.SLDASM
3D/Printing/: Lidar.STL  База.STL  База2.STL  База3.STL  Ножка.STL
ESP32_CAR_Control/data/: function.js  index.htm  style.css
ESP32_CAR_Control/src/: env.hpp  fs_init.hpp  http.hpp  main.cpp  motors.hpp  start_ap.hpp
KalHozMobile/urdf/: KalHozMobile.csv  KalHozMobile.urdf
KalHozMobile_URDF/: CMakeLists.txt  package.xml
KalHozMobile_URDF/launch/: display.launch  gazebo.launch
KalHozMobile_URDF/meshes/: imu.STL  right_wheel.STL
kalhoz_mobile_urdf/: package.xml  setup.cfg  setup.py
kalhoz_mobile_urdf/launch/: kalhoz.launch.py
kalhoz_mobile_urdf/meshes/: base_link.STL  left_wheel.STL
kalhoz_mobile_urdf/models/: KalHozMobile.urdf
mobile_robot/: CMakeLists.txt  package.xml
mobile_robot/config/: ekf.yaml
mobile_robot/launch/: mobile_robot_v1.launch.py  mobile_robot_v2.launch.py  mobile_robot_v4.launch.py  mobile_robot_v5.launch.py
mobile_robot/models/: mobile_robot_v1.urdf
mobile_robot/models/mobile_robot_description/: model.config  model.sdf
mobile_robot/rviz/: nav2_config.rviz
mobile_robot/worlds/mobile_robot_world/: smalltown.world
(+6 files in other folders)
